correct article spacing

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -6,9 +6,10 @@
 }
 
 .tabdaf>tbody>tr>td{
-  padding-left: 0;
-  padding-right: 0;
   text-align: center;
   vertical-align: middle;
-  border-top: 0;
+}
+
+.tabdaf>tbody>tr>th {
+  word-wrap: break-word;
 }
